test/data/output-yaml/want-deployment-exec-healthcheck.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webSvc1
  labels:
    app.kubernetes.io/name: webSvc1
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: webSvc1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: webSvc1
    spec:
      containers:
        - name: app
          image: private-image
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                  - /bin/sleep
                  - "20"
          ports:
            - containerPort: 8080
            - containerPort: 8443
          livenessProbe:
            exec:
              command:
                - cat
                - /tmp/test
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
