test/data/output-yaml/want-deployment-with-azkv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webSvc1
  labels:
    app.kubernetes.io/name: webSvc1
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: webSvc1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: webSvc1
    spec:
      containers:
        - name: app
          image: private-image
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                  - /bin/sleep
                  - "20"
          ports:
            - containerPort: 8080
            - containerPort: 8443
          volumeMounts:
            - name: webSvc1
              mountPath: "/mnt/secrets-store"
              readOnly: true
          envFrom:
            - configMapRef:
                name: webSvc1
            - secretRef:
                name: webSvc1
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
              httpHeaders:
                - name: Custom-Header-1
                  value: Awesome1
                - name: Custom-Header-2
                  value: Awesome2
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
              httpHeaders:
                - name: Custom-Header-3
                  value: Awesome3
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
      volumes:
        - name: webSvc1
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "webSvc1"
            nodePublishSecretRef:
              name: secrets-store-creds
