test/data/output-yaml/want-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webSvc1
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - web.test.com
      secretName: wild-test-com-cert
  rules:
    - host: web.test.com
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: webSvc1
                port:
                  number: 80
