test/data/output-yaml/want-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: webSvc1
  name: webSvc1
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: webSvc1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
